# catapult

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
catapult/: __main__.py  config.py  deploy.py  projects.py  release.py  tickets.py  utils.py
catapult/integrations/: __init__.py  clubhouse.py  git.py  github.py  shortcut.py  tracker.py
resource/: README.md  check  in  out
tests/: test_release.py
