[tool.poetry]
name = "catapult"
version = "1.0.2"
description = "CLI Tool to create, deploy, and manage releases."
authors = ["Fede Figus <federico.figus@tessian.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
boto3 = "1.26.75"
pygit2 = "1.9.2"  # Supports libgit2 v1.4.3 - which is the version available for Apline Linux
                  # https://github.com/libgit2/pygit2/blob/master/CHANGELOG.rst#192-2022-05-24
colorama = "0.3.9"
dataclasses = "0.6"
emoji = "2.0.0"
invoke = "1.7.1"
pytz = "2020.4"
requests = "2.24.0"
tabulate = "0.8.6"
termcolor = "1.1.0"
toml = "0.10.2"
tzlocal = "4.2"
wrapt = "1.14.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
freezegun = "1.2.1"
moto = "3.1.16"
python-dateutil = "2.8.2"
testfixtures = "7.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
catapult = "catapult.__main__:main"
